create base_layout script

--- a/styles/BaseLayout.module.css
+++ b/styles/BaseLayout.module.css
@@ -1,3 +1,7 @@
+.none {
+  display: none;
+}
+
 .body {
   width: 100%;
   height: 100vh;
@@ -41,8 +45,13 @@
   flex-grow: 0;
 }
 
+.hamburger_menu_button_blank {
+  display: none;
+}
+
 .hamburger_menu_button {
   display: none;
+  margin-left: auto;
 }
 
 .hamburger_menu_button {
@@ -62,9 +71,9 @@
   transition-duration: 0.3s;
 }
 
-.rectangle_1,
-.rectangle_2,
-.rectangle_3 {
+.hamburger_menu_button > .rectangle_1,
+.hamburger_menu_button > .rectangle_2,
+.hamburger_menu_button > .rectangle_3 {
   position: absolute;
   left: 4px;
   width: 41px;
@@ -74,15 +83,15 @@
   border-radius: 3px;
 }
 
-.rectangle_1 {
+.hamburger_menu_button > .rectangle_1 {
   top: 8px;
 }
 
-.rectangle_2 {
+.hamburger_menu_button > .rectangle_2 {
   top: 18px;
 }
 
-.rectangle_3 {
+.hamburger_menu_button > .rectangle_3 {
   top: 28px;
 }
 
@@ -256,18 +265,6 @@
   flex-grow: 0;
 }
 
-.hamburger_menu_contents {
-  width: 400px;
-  height: 370px;
-
-  background: #29e226;
-
-  /* Inside auto layout */
-  flex: none;
-  order: 0;
-  flex-grow: 0;
-}
-
 .footer {
   /* Auto layout */
   display: flex;
@@ -309,8 +306,15 @@
 /*mobile mode*/
 @media (max-width: 767px) {
   .header {
-    justify-content: space-between;
     padding: 0 10px;
+  }
+
+  .header > h1 {
+    margin-right: auto;
+  }
+
+  .hamburger_menu_button_blank {
+    display: hide;
   }
 
   .hamburger_menu_button {
