--- a/styles/BaseLayout.module.css
+++ b/styles/BaseLayout.module.css
@@ -446,3 +446,20 @@
     display: block;
   }
 }
+
+@media (max-width: 430px) {
+  .hamburger_menu_view {
+    padding: 10px;
+    gap: 5px;
+
+    padding-bottom: 30px;
+  }
+
+  .hamburger_menu_container {
+    padding: 10px;
+  }
+
+  .hamburger_menu {
+    padding: 25px;
+  }
+}
