--- a/styles/MemoLayout.module.css
+++ b/styles/MemoLayout.module.css
@@ -340,6 +340,101 @@
   display: none;
 }
 
+.memo_save_humburger_menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+  gap: 50px;
+
+  width: auto;
+  height: auto;
+
+  background: #ffffff;
+}
+
+.memo_save_humburger_menu > .title {
+  width: 100%;
+  height: auto;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 39px;
+  /* identical to box height */
+
+  text-align: center;
+
+  color: #000000;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.memo_save_humburger_menu > .text_outer {
+  /* Auto layout */
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0px;
+
+  width: 100%;
+  height: auto;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 1;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
+.memo_save_humburger_menu > .text_outer > .text {
+  width: 100%;
+  height: auto;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 31px;
+
+  color: #000000;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 0;
+  flex-grow: 1;
+}
+
+.button_block {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+  padding: 0px;
+  gap: 50px;
+
+  width: 100%;
+  height: 51px;
+
+  /* Inside auto layout */
+
+  flex: none;
+  order: 2;
+  align-self: stretch;
+  flex-grow: 0;
+}
+
 /*mobile mode*/
 @media (max-width: 767px) {
   .body {
@@ -362,5 +457,22 @@
 
   .memo_item_list_outer {
     height: calc(100% - 80px);
+    padding-bottom: 200px;
+  }
+
+  .memo_save_humburger_menu > .title {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 200;
+    font-size: 17px;
+    line-height: 22px;
+  }
+
+  .memo_save_humburger_menu > .text_outer > .text {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 200;
+    font-size: 13.5px;
+    line-height: 20px;
   }
 }
